# src/App/Bundle/AdminBundle/Entity/GameConfig.php
@@ -8,7 +8,7 @@ use Doctrine\ORM\Mapping as ORM;
  * GameConfig
  *
  * @ORM\Table(name="game_config")
- * @ORM\Entity
+ * @ORM\Entity(repositoryClass="App\Bundle\AdminBundle\Repository\GameConfigRepository")
  */
 class GameConfig
 {
@@ -42,5 +42,96 @@ class GameConfig
      */
     private $initCard;
 
+    /**
+     * GameConfig  Id
+     *
+     * @author liulian
+     * @return int
+     */
+    public function getId()
+    {
+        return $this->id;
+    }
+
+    /**
+     * @param int $id
+     *
+     * @return GameConfig
+     */
+    public function setId($id)
+    {
+        $this->id = $id;
+
+        return $this;
+    }
+
+    /**
+     * GameConfig  InitGold
+     *
+     * @author liulian
+     * @return int
+     */
+    public function getInitGold()
+    {
+        return $this->initGold;
+    }
+
+    /**
+     * @param int $initGold
+     *
+     * @return GameConfig
+     */
+    public function setInitGold($initGold)
+    {
+        $this->initGold = $initGold;
+
+        return $this;
+    }
+
+    /**
+     * GameConfig  InitBank
+     *
+     * @author liulian
+     * @return int
+     */
+    public function getInitBank()
+    {
+        return $this->initBank;
+    }
+
+    /**
+     * @param int $initBank
+     *
+     * @return GameConfig
+     */
+    public function setInitBank($initBank)
+    {
+        $this->initBank = $initBank;
+
+        return $this;
+    }
+
+    /**
+     * GameConfig  InitCard
+     *
+     * @author baofan
+     * @return int
+     */
+    public function getInitCard()
+    {
+        return $this->initCard;
+    }
+
+    /**
+     * @param int $initCard
+     *
+     * @return GameConfig
+     */
+    public function setInitCard($initCard)
+    {
+        $this->initCard = $initCard;
+
+        return $this;
+    }
 
 }
